--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,44 +21,26 @@
     <string name="reposInf11h">Déjà 3 repos de moins de 11H</string>
 
 
-    <string name="text_alcohol">Alcohol</string>
-    <string name="text_coffee">Coffee</string>
-    <string name="text_pasta">Pasta</string>
-    <string name="text_cold_drinks">Cold Drinks</string>
-    <string name="text_expanded">Expanded</string>
-    <string name="text_collapsed">Collapsed</string>
-
-
-
-    <string-array name="string_array_alcohol">
-        <item>Vodka</item>
-        <item>Rum</item>
-        <item>Whiskey</item>
-        <item>Gin</item>
-        <item>Tequila</item>
-    </string-array>
-
-    <string-array name="string_array_coffee">
-        <item>Espresso</item>
-        <item>Macchiato</item>
-        <item>Cappuccino</item>
-        <item>Cafe Latte</item>
-        <item>Ristretto</item>
-    </string-array>
-
-    <string-array name="string_array_pasta">
-        <item>Carbonara</item>
-        <item>Capellini</item>
-        <item>Spaghetti</item>
-        <item>Gnocchi</item>
-        <item>Lasagnette</item>
-    </string-array>
-
-    <string-array name="string_array_cold_drinks">
-        <item>Cola</item>
-        <item>Lemonade</item>
-        <item>Citrus soda</item>
-        <item>Juice</item>
-        <item>Sparkling Water</item>
-    </string-array>
+    <string name="button_clear">C</string>
+    <string name="button_root"> √ </string>
+    <string name="button_plus"> + </string>
+    <string name="button_7">7</string>
+    <string name="button_8">8</string>
+    <string name="button_9">9</string>
+    <string name="button_minus"> - </string>
+    <string name="button_4">4</string>
+    <string name="button_5">5</string>
+    <string name="button_6">6</string>
+    <string name="button_mul"> x </string>
+    <string name="button_1">1</string>
+    <string name="button_2">2</string>
+    <string name="button_3">3</string>
+    <string name="button_div"> / </string>
+    <string name="button_dot"> . </string>
+    <string name="button_0">0</string>
+    <string name="button_equals"> = </string>
+    <string name="button_mod"> % </string>
+    <string name="button_pow"> ^ </string>
+    <string name="error">Error</string>
+    <string name="backspace">Backspace</string>
 </resources>
