--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="button_pow"> ^ </string>
     <string name="error">Error</string>
     <string name="backspace">Backspace</string>
+    <string name="channel_name2">Channel Carte</string>
 </resources>
