--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="title_activity_settings">Réglages</string>
 
     <string name="channel_name">Channel Amplitude</string>
+    <string name="channel_name2">Channel Carte échéance</string>
+    <string name="channel_name3">Channel Carte vidage</string>
     <string name="channel_description">Sur ce canal, vous recevrez un message avant la fin de votre amplitude</string>
     <string name="notification_time">15 mn avant.</string>
     <string name="conuiteSup10h">Déjà 2 conduites de + de 9h</string>
@@ -44,5 +46,5 @@
     <string name="button_pow"> ^ </string>
     <string name="error">Error</string>
     <string name="backspace">Backspace</string>
-    <string name="channel_name2">Channel Carte</string>
+
 </resources>
